<resources>
    <string name="app_name">JetpackNavTest</string>
    <string name="title">Welcome to \"Title\"</string>
    <string name="your_journe">Your journey logging assistant</string>
    <string name="your_email">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="button_log_in">Log in</string>
    <string name="button_log_out">Log out</string>
    <string name="reset">Reset</string>
    <string name="enter_username">Enter your username to reset password</string>
    <string name="reset_password">Reset Password</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_myTrips">My trips</string>
    <string name="title_myVehicles">My vehicles</string>
    <string name="title_driverScore">Driver Score</string>
    <string name="title_profile">Profile</string>
    <string name="myvehicles_fragment">This is myVehicles fragment</string>
    <string name="mytrips_fragment">This is myTrips fragment</string>
    <string name="profile_fragment">This is profile fragment</string>
    <string name="driverscore_fragment">This is DriverScore fragment</string>
    <string name="retry_snackbar">RETRY</string>
    <string name="error_snackbar">Something wrong</string>
</resources>